--- a/templates/download_p.html
+++ b/templates/download_p.html
@@ -6,13 +6,13 @@
 
 
   <link href="static/css/styles.css" rel="stylesheet" />
-  <div class="container-sm" id="dynamic-section" style="background-image: url('/static/Rose Gold.png')">
+  <div class="container-sm" id="dynamic-section" style="background-image: url('/static/Silver.png')">
     <!-- Content section 1 -->
     <section id="page-top">
         <div class="container-sm"><br><br>
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="static/assets/img/01.jpg" alt="Puzzle Game" onClick="startGame()"/></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="static/assets/img/01.jpg" alt="" onclick="downP()"/></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -24,27 +24,67 @@
         </div>
     </section>
     <section>
-    <div class="container-sm" id="content" style="background-image: url('/static/Rose Gold.png')">
+    <div class="container-sm" id="content" style="background-image: url('/static/Silver.png')">
       <br>
       <h3>Download Puzzle_Game</h3>
           <div>
           <ul>
             <li><a href="{{ url_for('static', filename='downloads/Puzzle_Game_Windows.zip') }}" download>Download Windows</a></li>
-            <li><a href="{{ url_for('static', filename='static/downloads/Puzzle_Game_MacOS.app.zip') }}" download>Download MacOS</a></li>
+            <li><a href="{{ url_for('static', filename='downloads/Puzzle_Game_MacOS.zip') }}" download>Download MacOS</a></li>
             <br>
-            </ul>
-          <button class="btn btn-outline-secondary" id="backButton" onclick="goToIndex()"> Indietro</button><br><br>
-          </div>
-    </div>
+            </ul>  
+          <button class="btn btn-outline-secondary" id="backButton" onclick="goToIndex()"> Indietro</button><br><br>   
+          </div>           
+    </div>    
     </section>
-  </div>
+  </div> 
   <!-- Button to go back -->
 
-<script src="static/js/scripts.js"></script>
-<script>
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/scripts.js"></script>
+    <script>
+
     function goToIndex() {
         window.location.href = '/'; // Reindirizza alla pagina index
     }
+
+    function loadPage(page_name) {
+        $.ajax({
+            type: 'GET',
+            url: '/' + page_name + '.html',
+            success: function(response) {
+                $("#content").html(response);
+                $(".masthead").hide(); // Nascondi l'header quando carichi il form
+            },
+            error: function(error) {
+                console.error('Errore durante il caricamento della pagina:', error);
+            }
+        });
+    }
+    function loadDownloadPage(page) {
+        $.ajax({
+            url: '/' + page,  // Assicurati che la rotta corrispondente esista nel tuo app.py
+            type: 'GET',
+            success: function(response) {
+                $('#dynamic-section').html(response);  // Carica il contenuto della pagina nella sezione dinamica
+            },
+            error: function(error) {
+                console.error('Errore durante il caricamento della pagina:', error);
+                alert("Errore durante il caricamento della pagina");
+            }
+        });
+    }
+
+    $('#load-p-btn').click(function() {
+        loadDownloadPage('down_p');
+    });
+
+    $('#load-m-btn').click(function() {
+        loadDownloadPage('down_m');
+    });
 
     function startGame() {
         $.ajax({
@@ -59,5 +99,48 @@
             }
         });
     }
+
+    function startMemory() {
+        $.ajax({
+            type: 'POST',
+            url: '/start_memory',
+            success: function(response) {
+                console.log(response);
+            },
+            error: function(error) {
+                console.error('Errore durante l\'avvio del gioco:', error);
+                alert("Errore nell'avvio del Memory game");
+            }
+        });
+    }
+    
+    function downP() {
+        $.ajax({
+            type: 'GET',
+            url: '/down_p',
+            success: function(response) {
+                console.log(response);
+            },
+            error: function(error) {
+                console.error('Errore durante l\'apertura della pagina:', error);
+                alert("Errore durante l'avvio della pagina");
+            }
+        });
+    }
+
+    function downM() {
+        $.ajax({
+            type: 'GET',
+            url: '/down_m',
+            success: function(response) {
+                console.log(response);
+            },
+            error: function(error) {
+                console.error('Errore durante l\'apertura della pagina:', error);
+                alert("Errore durante l'avvio della pagina");
+            }
+        });
+    }
+
 </script>
 
