--- a/templates/section_authenticated.html
+++ b/templates/section_authenticated.html
@@ -12,7 +12,7 @@
         <div class="container-sm" id="masthead"><br><br>
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><a href="#"><img class="img-fluid rounded-circle" src="static/assets/img/01.jpg" alt="Puzzle Game" id="load-p-btn"/></a></div>
+                    <div class="p-5"><a href="down_p"><img class="img-fluid rounded-circle" src="static/assets/img/01.jpg" alt="Puzzle Game" id="load-p-btn"/></a></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -28,7 +28,7 @@
         <div class="container-sm" id="masthead">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6">
-                    <div class="p-5"><a href="#"><img class="img-fluid rounded-circle" src="static/assets/img/02.jpg" alt="Download Memory Game" id="load-m-btn"/></a></div> <!-- onclick="startMemory()" -->
+                    <div class="p-5"><a href="/down_m"><img class="img-fluid rounded-circle" src="static/assets/img/02.jpg" alt="Download Memory Game" id="load-m-btn"/></a></div> <!-- onclick="downM()" -->
                 </div>
                 <div class="col-lg-6">
                     <div class="p-5">
