--- a/templates/download_m.html
+++ b/templates/download_m.html
@@ -25,7 +25,7 @@
             <h3>Download Memory_Game</h3>
             <div>
                 <ul>
-                    <li><a href="{{ url_for('static', filename='static/downloads/memory.zip') }}" download>Download Windows</a></li>
+                    <li><a href="{{ url_for('static', filename='/downloads/memory.zip') }}" download>Download Windows</a></li>
                     <br>
                 </ul>  
                 <button class="btn btn-outline-secondary" id="backButton" onclick="goToIndex()"> Indietro</button><br><br>   
