--- a/templates/download_p.html
+++ b/templates/download_p.html
@@ -29,7 +29,7 @@
       <h3>Download Puzzle_Game</h3>
           <div>
           <ul>
-            <li><a href="{{ url_for('static', filename='static/downloads/puzzle.zip') }}" download>Download Windows</a></li>
+            <li><a href="{{ url_for('static', filename='/downloads/puzzle.zip') }}" download>Download Windows</a></li>
             <br>
             </ul>  
           <button class="btn btn-outline-secondary" id="backButton" onclick="goToIndex()"> Indietro</button><br><br>   
